# WinSocketChat

./: CMakeLists.txt  build.bat
NetClientTest/NetClientTest/: NetClientTest.cpp
NetTest/NetTest/: NetTest.cpp
