cmake_minimum_required(VERSION 3.13)

project(NetworkChat VERSION 1.0 LANGUAGES CXX)

add_executable(Server NetTest/NetTest/NetTest.cpp)
add_executable(Client NetClientTest/NetClientTest/NetClientTest.cpp)

add_compile_options(
    -Werror

    -Wall
    -Wextra
    -Wpedantic

    -Wcast-align
    -Wcast-qual
    -Wconversion
    -Wctor-dtor-privacy
    -Wenum-compare
    -Wfloat-equal
    -Wnon-virtual-dtor
    -Wold-style-cast
    -Woverloaded-virtual
    -Wredundant-decls
    -Wsign-conversion
    -Wsign-promo
)

if(NOT CMAKE_CXX_EXTENSIONS)
    set(CMAKE_CXX_EXTENSIONS OFF)
endif()